--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
 								<section>
 									<div class="row">
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="01-Random Selector/Random Selector Extend/RandomSelector.html" class="image fit"><img src="images/cover01-2.jpg" alt=""></a>
+											<a href="01-Random Selector/RandomSelector.html" class="image fit"><img src="images/cover01-2.jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="02-Club Course/Club Course Extend/Index.html" class="image fit"><img src="images/cover02-2.jpg" alt=""></a>
+											<a href="02-Club Course/Index.html" class="image fit"><img src="images/cover02-2.jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="03-Mind Quiz/Mind Quiz/Index.html" class="image fit"><img src="images/cover03-1.jpg" alt=""></a>
+											<a href="03-Mind Quiz/Index.html" class="image fit"><img src="images/cover03-1.jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="04-Simple RPG/Simple RPG/Index.html" class="image fit"><img src="images/cover04-1.jpg" alt=""></a>
+											<a href="04-Simple RPG/Index.html" class="image fit"><img src="images/cover04-1.jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="05-YouTube Player/YouTube Player/Index.html" class="image fit"><img src="images/cover05-1.jpg" alt=""></a>
+											<a href="05-YouTube Player/Index.html" class="image fit"><img src="images/cover05-1.jpg" alt=""></a>
 										</div>
 										<!--<div class="col-4 col-6-medium col-12-small">
 											<a href="#" class="image fit"><img src="images/pic08.jpg" alt=""></a>
